# idp-platform

./: ArgoCDGitOps.sh  K3sDevEdge.sh  LICENCE.MD  Localdev.sh  cli-command.sh  docker-compose.yml
cli/: Cargo.toml  Dockerfile
cli/src/: config.rs  error.rs  main.rs  output.rs
cli/src/api_client/: mod.rs  types.rs
cli/src/commands/: app.rs  auth.rs  cost.rs  deploy.rs  env.rs  logs.rs  mod.rs  status.rs
control-plane/: Dockerfile  build_log.txt  go.mod  go.sum
control-plane/cmd/server/: main.go
control-plane/internal/api/: api.go  auth_handler.go  handlers.go  middleware.go  router.go
control-plane/internal/auth/: auth.go  service.go
control-plane/internal/config/: config.go
control-plane/internal/orchestrator/: orchestrator.go
control-plane/internal/provisioner/: provisioner.go
control-plane/internal/repository/: postgres.go
control-plane/internal/telemetry/: tracer.go
control-plane/pkg/k8sclient/: client.go
docs/: architecture.md
infra/ansible/inventory/dev/: conf.ini
infra/ansible/playbooks/: hardening.yml  k3s-install.yml
infra/terraform/: backend.tf
infra/terraform/envs/dev/: main.tf
infra/terraform/modules/: main.tf
infra/terraform/modules/networking/: main.tf
k8s/argocd/applications/: idp-platform.yaml
k8s/base/: kustomization.yaml
k8s/base/control-plane/: deployment.yaml
k8s/base/ml-engine/: deployment.yaml
k8s/overlays/overlays/dev/: kustomization.yaml
k8s/overlays/overlays/dev/patches/: replicas.yaml
ml-cost-engine/: Dockerfile  pyproject.toml
ml-cost-engine/src/: config.py
ml-cost-engine/src/anomaly/: detector.py
ml-cost-engine/src/api/: main.py  routes.py
ml-cost-engine/src/predictor/: cost_predictor.py
