[package]
name = "idpctl"
version = "0.1.0"
edition = "2021"
authors = ["Michel Okoubi <okouby@gmail.com>"]
description = "CLI tool for Internal Developer Platform"

[[bin]]
name = "idpctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.14"
config = "0.13"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "2.0"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"